# bencode

./: Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
pysrc/bencode/: __init__.py  __init__.pyi
pysrc/bencoders/: __init__.py  __init__.pyi
pysrc/pet/: __init__.py
src/: error.rs  lib.rs  parser.rs  py_module.rs  value.rs
src/tests/: test_parser.rs
tests/: test_bencoder.py
